force-app/main/default/objects/Knowledge__kav/fields/Enhancements__c.field-meta.xml
<CustomField>
    <fullName>Enhancements__c</fullName>
    <inlineHelpText>Include all new features and enhancements for this release.</inlineHelpText>
    <label>Enhancements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>