force-app/main/default/objects/Knowledge__kav/fields/Fixes__c.field-meta.xml
<CustomField>
    <fullName>Fixes__c</fullName>
    <inlineHelpText>Include all bug fixes for this release.</inlineHelpText>
    <label>Fixes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>