force-app/main/default/objects/Knowledge__kav/fields/How_does_it_work__c.field-meta.xml
<CustomField>
    <fullName>How_does_it_work__c</fullName>
    <inlineHelpText>Provide a brief overview of the processes involved.</inlineHelpText>
    <label>How does it work?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>