force-app/main/default/objects/Knowledge__kav/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <inlineHelpText>Enter step by step instructions that the user can follow, using numbered lists for steps and bullet points for lists. Add screenshots whenever required.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>