force-app/main/default/objects/Knowledge__kav/fields/Original_Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Publication_Date__c</fullName>
    <description>Date when the original content was published</description>
    <inlineHelpText>Use this field when copying over content from other sources to show when the content was originally published.</inlineHelpText>
    <label>Original Publication Date</label>
    <type>DateTime</type>
</CustomField>