force-app/main/default/objects/Knowledge__kav/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Mandatory field for identifying the Product concerned.</description>
    <inlineHelpText>Available values are Drive, Field Service Management, Advanced Analytics, Drive Cloud, Drive Edge (SCADA)</inlineHelpText>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
            </value>
            <value>
                <fullName>Field Service Management (FSM)</fullName>
            </value>
            <value>
                <fullName>Advanced Analytics (AA)</fullName>
            </value>
            <value>
                <fullName>Drive Cloud</fullName>
            </value>
            <value>
                <fullName>Drive Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>