force-app/main/default/objects/Knowledge__kav/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Reference link</description>
    <inlineHelpText>Use this field to link to any outside references for this content.</inlineHelpText>
    <label>Reference</label>
    <type>TextArea</type>
</CustomField>