force-app/main/default/objects/Knowledge__kav/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <description>The product release the content is associated with.</description>
    <inlineHelpText>Use this field for the product release number, e.g., 2.13.</inlineHelpText>
    <label>Release</label>
    <length>80</length>
    <type>Text</type>
</CustomField>