force-app/main/default/objects/Knowledge__kav/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Release Note Type</description>
    <inlineHelpText>Designate your Release Note as an Enhancement, Fix or Known Issue.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Fix</fullName>
            </value>
            <value>
                <fullName>Known Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>