force-app/main/default/objects/Knowledge__kav/fields/What_is_it__c.field-meta.xml
<CustomField>
    <fullName>What_is_it__c</fullName>
    <inlineHelpText>Enter a brief explanation of the feature and what benefits it would provide users.</inlineHelpText>
    <label>What is it?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>