force-app/main/default/objects/Knowledge__kav/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>true</active>
    <description>Wiki-type articles for use with the Knowledge Base</description>
    <label>Article</label>
</RecordType>