force-app/main/default/objects/Knowledge__kav/recordTypes/Release_Note_Short.recordType-meta.xml
<RecordType>
    <fullName>Release_Note_Short</fullName>
    <active>true</active>
    <description>Use this to add individual enhancements, fixes and known issues as Release Notes</description>
    <label>Release Note (Short Form)</label>
</RecordType>