force-app/main/default/objects/Knowledge__kav/recordTypes/Training_Resource.recordType-meta.xml
<RecordType>
    <fullName>Training_Resource</fullName>
    <active>true</active>
    <description>Media (video, presentations, etc.) and other materials used for training</description>
    <label>Training Resource</label>
</RecordType>