force-app/main/default/objects/Knowledge__kav/recordTypes/User_Guide.recordType-meta.xml
<RecordType>
    <fullName>User_Guide</fullName>
    <active>true</active>
    <description>Step by step instructions on how to use a feature or tool.</description>
    <label>User Guide</label>
</RecordType>